@@ -23,6 +23,7 @@ version <next>:
 - audio lv2 wrapper filter
 - VAAPI VP8 decoding
 - AMD AMF H.264 and HEVC encoders
+- video fillborders filter
 
 
 version 3.4:
